# mn-wi1

./: README.md  vercel.json
.emergent/: emergent.yml
frontend/: next.config.ts  package-lock.json  package.json  test_col.mjs  test_supabase.mjs
frontend/scripts/: fix_db.mjs
frontend/src/: App.css  App.js
frontend/src/app/: App.css  globals.css  layout.tsx  page.tsx
frontend/src/app/(ops)/: layout.tsx
frontend/src/app/(worker)/: layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/components/: WalletProvider.tsx
frontend/src/components/landing/: BackedBySection.jsx  CommunitySection.jsx  FeaturesSection.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  NewsSection.jsx  Partners.jsx  StatsSection.jsx  UseCases.jsx
frontend/src/components/ops/: DashboardSidebar.tsx  JobMapPicker.tsx  Placeholder.tsx
frontend/src/components/worker/: JobMap.tsx  WorkerPlaceholder.tsx  WorkerWalletContext.tsx
frontend/src/data/: mockData.js
programs-mandora-escrow/: .pnp.cjs  Anchor.toml  package.json
programs-mandora-escrow/programs/programs-mandora-escrow/: Cargo.toml
programs-mandora-escrow/programs/programs-mandora-escrow/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs-mandora-escrow/programs/programs-mandora-escrow/src/instructions/: approve_release.rs  assign_worker.rs  cancel_escrow.rs  create_escrow.rs  refund_escrow.rs  submit_proof.rs
programs-mandora-escrow/programs/programs-mandora-escrow/tests/: test_escrow.rs
scripts/: create-idrx-mint.js  mint-to-user.js
(+24 files in other folders)
